[package]
name = "wetspring-barracuda"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Squirrel Team"]
license = "AGPL-3.0-or-later"
description = "Life science + PFAS analytical chemistry pipelines — Rust + GPU via BarraCUDA/ToadStool"
repository = "https://github.com/syntheticChemistry/wetSpring"
keywords = ["bioinformatics", "mass-spectrometry", "pfas", "gpu", "wgsl"]
categories = ["science", "command-line-utilities"]

[workspace]
members = ["fuzz"]

[features]
default = []
# GPU acceleration via ToadStool/BarraCuda (Phase 3).
# Enable with `cargo build --features gpu`.
# Adds wgpu v22 (device creation), barracuda GPU ops (44+ primitives),
# and tokio (async device init). Zero local WGSL shaders (full lean).
gpu = ["barracuda/gpu", "dep:wgpu", "dep:tokio"]
# JSON model import (2 bins: validate_pfas_decision_tree, benchmark_three_tier).
json = ["dep:serde_json"]

[dependencies]
# serde_json: JSON parsing for validation data and model import (2 binaries).
serde_json = { version = "1", optional = true }

# ToadStool barracuda — always-on for CPU math (special, linalg, numerical).
# default-features = false: no wgpu/pollster/bytemuck pulled in for CPU builds.
# When `gpu` feature is active, `barracuda/gpu` enables GPU ops.
# S62+DF64: erf, ln_gamma, ridge, trapz, NMF, ODE bio, Anderson, PeakDetect,
# TransE, SpMM, Fp64Strategy, BatchedOdeRK4, ValidationHarness,
# ComputeDispatch, storage_bgl_entry, uniform_bgl_entry, gpu_ctx,
# GemmF64 DF64 auto-detection (hybrid FP32-core GEMM on consumer GPUs).
barracuda = { path = "../../phase1/toadstool/crates/barracuda", default-features = false }

# wgpu: WebGPU compute — hardware-agnostic GPU via Vulkan/Metal/DX12.
# Same version as barracuda to prevent duplicate symbol linking errors.
# default-features = false avoids pulling in renderdoc-sys (C dep).
wgpu = { version = "22", optional = true, default-features = false, features = ["wgsl", "vulkan-portability"] }

# Async runtime for GPU device creation (barracuda already brings tokio in).
tokio = { version = "1", features = ["rt", "macros"], optional = true }


# bytemuck: zero-copy casting for GPU uniform buffers (GemmCached params).
# Already a transitive dep via barracuda; pinned here for local extensions.
bytemuck = { version = "1", features = ["derive"] }

# I/O: zlib decompression (mzML binary arrays) + GzDecoder (FASTQ .gz).
# Uses miniz_oxide (pure Rust) by default — no C zlib, ecoBin compliant.
# XML parsing is sovereign (src/io/xml.rs); base64 is sovereign (src/encoding.rs).
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

[dev-dependencies]
tempfile = "3"

# ── Track 1 validation binaries ──────────────────────────────────
[[bin]]
name = "validate_fastq"
path = "src/bin/validate_fastq.rs"

[[bin]]
name = "validate_diversity"
path = "src/bin/validate_diversity.rs"

# ── Track 2 validation binaries ──────────────────────────────────
[[bin]]
name = "validate_mzml"
path = "src/bin/validate_mzml.rs"

[[bin]]
name = "validate_pfas"
path = "src/bin/validate_pfas.rs"

# ── Feature pipeline validation binary (Exp009) ──────────────────
[[bin]]
name = "validate_features"
path = "src/bin/validate_features.rs"

# ── Peak detection validation binary (Exp010) ────────────────────
[[bin]]
name = "validate_peaks"
path = "src/bin/validate_peaks.rs"

# ── 16S pipeline validation binary (dada2/chimera/taxonomy/unifrac) ──
[[bin]]
name = "validate_16s_pipeline"
path = "src/bin/validate_16s_pipeline.rs"

# ── Algae pond 16S validation binary (Exp012, paper proxy) ───────
[[bin]]
name = "validate_algae_16s"
path = "src/bin/validate_algae_16s.rs"

# ── Extended algae validation binary (Exp017, PRJNA382322) ───────
[[bin]]
name = "validate_extended_algae"
path = "src/bin/validate_extended_algae.rs"

# ── VOC peak validation binary (Exp013, Reese 2019) ─────────────
[[bin]]
name = "validate_voc_peaks"
path = "src/bin/validate_voc_peaks.rs"

# ── Public data benchmark validation (Exp014, PRJNA1114688) ──────
[[bin]]
name = "validate_public_benchmarks"
path = "src/bin/validate_public_benchmarks.rs"

# ── PFAS library validation binary (Exp018, Jones Lab) ───────────
[[bin]]
name = "validate_pfas_library"
path = "src/bin/validate_pfas_library.rs"

# ── Robinson-Foulds tree distance validation (Exp021) ───────────
[[bin]]
name = "validate_rf_distance"
path = "src/bin/validate_rf_distance.rs"

# ── QS/c-di-GMP ODE validation (Exp020, Waters 2008) ────────────
[[bin]]
name = "validate_qs_ode"
path = "src/bin/validate_qs_ode.rs"

# ── Gillespie SSA validation (Exp022, Massie 2012) ────────────────
[[bin]]
name = "validate_gillespie"
path = "src/bin/validate_gillespie.rs"

# ── Newick parsing validation (Exp019 Phase 1) ────────────────────
[[bin]]
name = "validate_newick_parse"
path = "src/bin/validate_newick_parse.rs"

# ── PFAS decision tree inference (Exp008 Phase 3) ─────────────────
[[bin]]
name = "validate_pfas_decision_tree"
path = "src/bin/validate_pfas_decision_tree.rs"
required-features = ["json"]

# ── Bistable phenotypic switching (Exp023, Fernandez 2020) ────────
[[bin]]
name = "validate_bistable"
path = "src/bin/validate_bistable.rs"

# ── Multi-input QS network (Exp024, Srivastava 2011) ─────────────
[[bin]]
name = "validate_multi_signal"
path = "src/bin/validate_multi_signal.rs"

# ── Cooperative QS game theory (Exp025, Bruger & Waters 2018) ────
[[bin]]
name = "validate_cooperation"
path = "src/bin/validate_cooperation.rs"

# ── HMM primitives (Exp026, Liu 2014) ────────────────────────────
[[bin]]
name = "validate_hmm"
path = "src/bin/validate_hmm.rs"

# ── Phenotypic capacitor (Exp027, Mhatre 2020) ──────────────────
[[bin]]
name = "validate_capacitor"
path = "src/bin/validate_capacitor.rs"

# ── Smith-Waterman alignment (Exp028, Liu track) ────────────────
[[bin]]
name = "validate_alignment"
path = "src/bin/validate_alignment.rs"

# ── Felsenstein pruning (Exp029, phylogenetic) ──────────────────
[[bin]]
name = "validate_felsenstein"
path = "src/bin/validate_felsenstein.rs"

# ── BarraCUDA CPU parity (all domains) ──────────────────────────
[[bin]]
name = "validate_barracuda_cpu"
path = "src/bin/validate_barracuda_cpu.rs"

# ── Phage defense (Exp030, Hsueh/Severin 2022) ─────────────────
[[bin]]
name = "validate_phage_defense"
path = "src/bin/validate_phage_defense.rs"

# ── RAWR bootstrap (Exp031, Wang 2021) ──────────────────────────
[[bin]]
name = "validate_bootstrap"
path = "src/bin/validate_bootstrap.rs"

# ── Phylogenetic placement (Exp032, Alamin & Liu 2024) ──────────
[[bin]]
name = "validate_placement"
path = "src/bin/validate_placement.rs"

# ── Neighbor-Joining (Exp033, Liu 2009 SATé) ─────────────────────
[[bin]]
name = "validate_neighbor_joining"
path = "src/bin/validate_neighbor_joining.rs"

# ── DTL Reconciliation (Exp034, Zheng 2023) ─────────────────────
[[bin]]
name = "validate_reconciliation"
path = "src/bin/validate_reconciliation.rs"

# ── BarraCUDA CPU Parity v2 (Exp035) ────────────────────────────
[[bin]]
name = "validate_barracuda_cpu_v2"
path = "src/bin/validate_barracuda_cpu_v2.rs"

# ── PhyNetPy RF distances (Exp036) ────────────────────────────────
[[bin]]
name = "validate_phynetpy_rf"
path = "src/bin/validate_phynetpy_rf.rs"

# ── PhyloNet-HMM discordance (Exp037) ────────────────────────────
[[bin]]
name = "validate_phylohmm"
path = "src/bin/validate_phylohmm.rs"

# ── SATe pipeline benchmark (Exp038) ─────────────────────────────
[[bin]]
name = "validate_sate_pipeline"
path = "src/bin/validate_sate_pipeline.rs"

# ── Algal pond time-series (Exp039, PRJNA382322 proxy) ───────────
[[bin]]
name = "validate_algae_timeseries"
path = "src/bin/validate_algae_timeseries.rs"

# ── Bloom surveillance (Exp040, PRJNA1224988 proxy) ──────────────
[[bin]]
name = "validate_bloom_surveillance"
path = "src/bin/validate_bloom_surveillance.rs"

# ── EPA PFAS ML (Exp041) ─────────────────────────────────────────
[[bin]]
name = "validate_epa_pfas_ml"
path = "src/bin/validate_epa_pfas_ml.rs"

# ── MassBank spectral matching (Exp042) ──────────────────────────
[[bin]]
name = "validate_massbank_spectral"
path = "src/bin/validate_massbank_spectral.rs"

# ── BarraCUDA CPU Parity v3 (Exp043 — all 18 domains) ───────────
[[bin]]
name = "validate_barracuda_cpu_v3"
path = "src/bin/validate_barracuda_cpu_v3.rs"

# ── BarraCUDA CPU Parity v4 (Exp057 — Track 1c, 23 total domains) ──
[[bin]]
name = "validate_barracuda_cpu_v4"
path = "src/bin/validate_barracuda_cpu_v4.rs"

# ── 23-domain head-to-head timing benchmark (Exp059) ─────────────
[[bin]]
name = "benchmark_23_domain_timing"
path = "src/bin/benchmark_23_domain_timing.rs"

# ── BarraCUDA CPU Parity v5 (Exp061/062 — RF + GBM, 25 total domains) ──
[[bin]]
name = "validate_barracuda_cpu_v5"
path = "src/bin/validate_barracuda_cpu_v5.rs"

# ── Exp079: BarraCUDA CPU v6 — ODE Flat Param Fidelity ──
[[bin]]
name = "validate_barracuda_cpu_v6"
path = "src/bin/validate_barracuda_cpu_v6.rs"

# ── Exp085: BarraCUDA CPU v7 — Tier A Data Layout Fidelity ──
[[bin]]
name = "validate_barracuda_cpu_v7"
path = "src/bin/validate_barracuda_cpu_v7.rs"

# ── Exp070: BarraCUDA CPU Full — 25-Domain Pure Rust Math Proof ──
[[bin]]
name = "validate_barracuda_cpu_full"
path = "src/bin/validate_barracuda_cpu_full.rs"

# ── Rare biosphere validation (Exp051, Anderson 2015) ─────────────
[[bin]]
name = "validate_rare_biosphere"
path = "src/bin/validate_rare_biosphere.rs"

# ── Pangenomics validation (Exp056, Moulana 2020) ─────────────────
[[bin]]
name = "validate_pangenomics"
path = "src/bin/validate_pangenomics.rs"

# ── Population genomics validation (Exp055, Anderson 2017) ────────
[[bin]]
name = "validate_population_genomics"
path = "src/bin/validate_population_genomics.rs"

# ── Phosphorus phylogenomics validation (Exp054, Boden 2024) ──────
[[bin]]
name = "validate_phosphorus_phylogenomics"
path = "src/bin/validate_phosphorus_phylogenomics.rs"

# ── Sulfur phylogenomics validation (Exp053, Mateos 2023) ─────────
[[bin]]
name = "validate_sulfur_phylogenomics"
path = "src/bin/validate_sulfur_phylogenomics.rs"

# ── Viral metagenomics validation (Exp052, Anderson 2014) ─────────
[[bin]]
name = "validate_viral_metagenomics"
path = "src/bin/validate_viral_metagenomics.rs"

# ── Pipeline benchmark (Exp015: Rust CPU vs Galaxy/QIIME2) ───────
[[bin]]
name = "benchmark_pipeline"
path = "src/bin/benchmark_pipeline.rs"

# ── ToadStool Bio Absorption (Exp045) ────────────────────────────
[[bin]]
name = "validate_toadstool_bio"
path = "src/bin/validate_toadstool_bio.rs"
required-features = ["gpu"]

# ── BarraCUDA GPU v3 (Exp044 — CPU→GPU parity for v3 domains) ────
[[bin]]
name = "validate_barracuda_gpu_v3"
path = "src/bin/validate_barracuda_gpu_v3.rs"
required-features = ["gpu"]

# ── Exp071: BarraCUDA GPU Full — Math Portability Proof ──
[[bin]]
name = "validate_barracuda_gpu_full"
path = "src/bin/validate_barracuda_gpu_full.rs"
required-features = ["gpu"]

# ── GPU validation binaries (require --features gpu) ─────────────
[[bin]]
name = "validate_diversity_gpu"
path = "src/bin/validate_diversity_gpu.rs"
required-features = ["gpu"]

# ── GPU 16S pipeline parity (Exp016: CPU vs GPU math parity) ─────
[[bin]]
name = "validate_16s_pipeline_gpu"
path = "src/bin/validate_16s_pipeline_gpu.rs"
required-features = ["gpu"]

# ── GPU Phylogenetic Composition (Exp046) ────────────────────────
[[bin]]
name = "validate_gpu_phylo_compose"
path = "src/bin/validate_gpu_phylo_compose.rs"
required-features = ["gpu"]

# ── GPU HMM Batch Forward (Exp047) ──────────────────────────────
[[bin]]
name = "validate_gpu_hmm_forward"
path = "src/bin/validate_gpu_hmm_forward.rs"
required-features = ["gpu"]

# ── CPU vs GPU Phylo+HMM Benchmark (Exp048) ─────────────────────
[[bin]]
name = "benchmark_phylo_hmm_gpu"
path = "src/bin/benchmark_phylo_hmm_gpu.rs"
required-features = ["gpu"]

# ── GPU ODE Sweep + Bifurcation (Exp049-050) ─────────────────────
[[bin]]
name = "validate_gpu_ode_sweep"
path = "src/bin/validate_gpu_ode_sweep.rs"
required-features = ["gpu"]

# ── GPU Track 1c Promotion (Exp058: ANI + SNP + Pangenome GPU) ───
[[bin]]
name = "validate_gpu_track1c"
path = "src/bin/validate_gpu_track1c.rs"
required-features = ["gpu"]

# ── metalForge cross-substrate validation (Exp060) ───────────────
[[bin]]
name = "validate_cross_substrate"
path = "src/bin/validate_cross_substrate.rs"
required-features = ["gpu"]

# ── GPU Random Forest (Exp063) ────────────────────────────────────
[[bin]]
name = "validate_gpu_rf"
path = "src/bin/validate_gpu_rf.rs"
required-features = ["gpu"]

# ── BarraCUDA GPU Parity v1 (Exp064 — consolidated GPU domains) ────
[[bin]]
name = "validate_barracuda_gpu_v1"
path = "src/bin/validate_barracuda_gpu_v1.rs"
required-features = ["gpu"]

# ── metalForge Full Cross-System (Exp065) ────────────────────────
[[bin]]
name = "validate_metalforge_full"
path = "src/bin/validate_metalforge_full.rs"
required-features = ["gpu"]

# ── metalForge Full Cross-Substrate v2 (Exp084) ──────────────────
[[bin]]
name = "validate_metalforge_full_v2"
path = "src/bin/validate_metalforge_full_v2.rs"
required-features = ["gpu"]

# ── CPU vs GPU All Domains (Exp092) ───────────────────────────────
[[bin]]
name = "validate_cpu_vs_gpu_all_domains"
path = "src/bin/validate_cpu_vs_gpu_all_domains.rs"
required-features = ["gpu"]

# ── GPU Drug Repurposing (Exp164) ────────────────────────────────
[[bin]]
name = "validate_gpu_drug_repurposing"
path = "src/bin/validate_gpu_drug_repurposing.rs"
required-features = ["gpu"]

# ── metalForge Drug Repurposing (Exp165) ─────────────────────────
[[bin]]
name = "validate_metalforge_drug_repurposing"
path = "src/bin/validate_metalforge_drug_repurposing.rs"
required-features = ["gpu"]

# ── metalForge Full v3 (Exp093) ──────────────────────────────────
[[bin]]
name = "validate_metalforge_full_v3"
path = "src/bin/validate_metalforge_full_v3.rs"
required-features = ["gpu"]

# ── Cross-Spring Evolution (Exp094) ──────────────────────────────
[[bin]]
name = "validate_cross_spring_evolution"
path = "src/bin/validate_cross_spring_evolution.rs"
required-features = ["gpu"]

# ── Local WGSL Compile Test (Exp096) ─────────────────────────────
[[bin]]
name = "validate_local_wgsl_compile"
path = "src/bin/validate_local_wgsl_compile.rs"
required-features = ["gpu"]

# ── metalForge Cross-Substrate v4 (Exp100) ───────────────────────
[[bin]]
name = "validate_metalforge_v4"
path = "src/bin/validate_metalforge_v4.rs"
required-features = ["gpu"]

# ── Pure GPU Promotion: All 13 Modules vs CPU Baselines ───────────
[[bin]]
name = "validate_pure_gpu_complete"
path = "src/bin/validate_pure_gpu_complete.rs"
required-features = ["gpu"]

# ── Expanded CPU vs GPU + metalForge (Exp099) ────────────────────
[[bin]]
name = "validate_cpu_gpu_expanded"
path = "src/bin/validate_cpu_gpu_expanded.rs"
required-features = ["gpu"]

# ── Cross-Spring Scaling Benchmark (Exp095) ──────────────────────
[[bin]]
name = "benchmark_cross_spring_scaling"
path = "src/bin/benchmark_cross_spring_scaling.rs"
required-features = ["gpu"]

# ── Pure GPU Streaming Pipeline (Exp090) ──────────────────────────
[[bin]]
name = "validate_pure_gpu_streaming"
path = "src/bin/validate_pure_gpu_streaming.rs"
required-features = ["gpu"]

# ── Streaming vs Round-Trip Benchmark (Exp091) ───────────────────
[[bin]]
name = "benchmark_streaming_vs_roundtrip"
path = "src/bin/benchmark_streaming_vs_roundtrip.rs"
required-features = ["gpu"]

# ── GPU Extended Domains (Exp087) ─────────────────────────────────
[[bin]]
name = "validate_gpu_extended"
path = "src/bin/validate_gpu_extended.rs"
required-features = ["gpu"]

# ── metalForge PCIe Direct Transfer Proof (Exp088) ───────────────
[[bin]]
name = "validate_pcie_direct"
path = "src/bin/validate_pcie_direct.rs"

# ── ToadStool Streaming Dispatch Proof (Exp089) ──────────────────
[[bin]]
name = "validate_streaming_dispatch"
path = "src/bin/validate_streaming_dispatch.rs"

# ── metalForge End-to-End Pipeline Proof (Exp086) ────────────────
[[bin]]
name = "validate_metalforge_pipeline"
path = "src/bin/validate_metalforge_pipeline.rs"

# ── CPU vs GPU All-Domain Scaling (Exp066) ───────────────────────
[[bin]]
name = "benchmark_all_domains_cpu_gpu"
path = "src/bin/benchmark_all_domains_cpu_gpu.rs"
required-features = ["gpu"]

# ── Dispatch Overhead Profiling (Exp067) ─────────────────────────
[[bin]]
name = "benchmark_dispatch_overhead"
path = "src/bin/benchmark_dispatch_overhead.rs"
required-features = ["gpu"]

# ── Three-Tier Benchmark: Python vs CPU vs GPU (Exp069) ─────────
[[bin]]
name = "benchmark_three_tier"
path = "src/bin/benchmark_three_tier.rs"
required-features = ["gpu", "json"]

# ── CPU vs GPU benchmark (require --features gpu) ────────────────
[[bin]]
name = "benchmark_cpu_gpu"
path = "src/bin/benchmark_cpu_gpu.rs"
required-features = ["gpu"]

# ── GPU Streaming Pipeline Proof (Exp072) ────────────────────────
[[bin]]
name = "validate_gpu_streaming_pipeline"
path = "src/bin/validate_gpu_streaming_pipeline.rs"
required-features = ["gpu"]

# ── Dispatch Overhead Proof (Exp073) ─────────────────────────────
[[bin]]
name = "validate_dispatch_overhead_proof"
path = "src/bin/validate_dispatch_overhead_proof.rs"
required-features = ["gpu"]

# ── metalForge Substrate Router (Exp074) ─────────────────────────
[[bin]]
name = "validate_substrate_router"
path = "src/bin/validate_substrate_router.rs"
required-features = ["gpu"]

# ── Pure GPU Analytics Pipeline (Exp075) ─────────────────────────
[[bin]]
name = "validate_pure_gpu_pipeline"
path = "src/bin/validate_pure_gpu_pipeline.rs"
required-features = ["gpu"]

# ── Cross-Substrate Pipeline (Exp076) ────────────────────────────
[[bin]]
name = "validate_cross_substrate_pipeline"
path = "src/bin/validate_cross_substrate_pipeline.rs"
required-features = ["gpu"]

[[bin]]
name = "validate_barracuda_cpu_v8"
path = "src/bin/validate_barracuda_cpu_v8.rs"

[[bin]]
name = "validate_barracuda_cpu_v9"
path = "src/bin/validate_barracuda_cpu_v9.rs"

[[bin]]
name = "validate_metalforge_v5"
path = "src/bin/validate_metalforge_v5.rs"
required-features = ["gpu"]

[[bin]]
name = "validate_metalforge_v6"
path = "src/bin/validate_metalforge_v6.rs"
required-features = ["gpu"]

[[bin]]
name = "validate_pure_gpu_streaming_v2"
path = "src/bin/validate_pure_gpu_streaming_v2.rs"
required-features = ["gpu"]

[[bin]]
name = "validate_streaming_ode_phylo"
path = "src/bin/validate_streaming_ode_phylo.rs"
required-features = ["gpu"]

# ── Cross-Spring Spectral Theory (Exp107) ───────────────────────
[[bin]]
name = "validate_spectral_cross_spring"
path = "src/bin/validate_spectral_cross_spring.rs"
required-features = ["gpu"]

# ── Vibrio QS Parameter Landscape (Exp108) ──────────────────────
[[bin]]
name = "validate_vibrio_qs_landscape"
path = "src/bin/validate_vibrio_qs_landscape.rs"
required-features = ["gpu"]

# ── Large-Scale Phylogenetic Placement (Exp109) ─────────────────
[[bin]]
name = "validate_phylo_placement_scale"
path = "src/bin/validate_phylo_placement_scale.rs"

# ── Cross-Ecosystem Pangenome (Exp110) ──────────────────────────
[[bin]]
name = "validate_cross_ecosystem_pangenome"
path = "src/bin/validate_cross_ecosystem_pangenome.rs"

# ── MassBank GPU Spectral Screening (Exp111) ────────────────────
[[bin]]
name = "validate_massbank_gpu_scale"
path = "src/bin/validate_massbank_gpu_scale.rs"
required-features = ["gpu"]

# ── Real-Bloom GPU Surveillance (Exp112) ────────────────────────
[[bin]]
name = "validate_real_bloom_gpu"
path = "src/bin/validate_real_bloom_gpu.rs"
required-features = ["gpu"]

# ── QS-Disorder from Real Diversity (Exp113) ────────────────────
[[bin]]
name = "validate_qs_disorder_real"
path = "src/bin/validate_qs_disorder_real.rs"
required-features = ["gpu"]

# ── NPU QS Phase Classifier (Exp114) ────────────────────────────
[[bin]]
name = "validate_npu_qs_classifier"
path = "src/bin/validate_npu_qs_classifier.rs"

# ── NPU Phylogenetic Placement (Exp115) ─────────────────────────
[[bin]]
name = "validate_npu_phylo_placement"
path = "src/bin/validate_npu_phylo_placement.rs"

# ── NPU Genome Binning (Exp116) ─────────────────────────────────
[[bin]]
name = "validate_npu_genome_binning"
path = "src/bin/validate_npu_genome_binning.rs"

# ── NPU Spectral Screening (Exp117) ─────────────────────────────
[[bin]]
name = "validate_npu_spectral_screen"
path = "src/bin/validate_npu_spectral_screen.rs"

# ── NPU Bloom Sentinel (Exp118) ─────────────────────────────────
[[bin]]
name = "validate_npu_bloom_sentinel"
path = "src/bin/validate_npu_bloom_sentinel.rs"

# ── NPU QS-Disorder Classifier (Exp119) ─────────────────────────
[[bin]]
name = "validate_npu_disorder_classifier"
path = "src/bin/validate_npu_disorder_classifier.rs"

# ── Cross-Spring Evolution Benchmark (Exp120) ──────────────────
[[bin]]
name = "benchmark_cross_spring_evolution"
path = "src/bin/benchmark_cross_spring_evolution.rs"

# ── ODE Lean + Cross-Spring Evolution Benchmark ───────────────
[[bin]]
name = "benchmark_ode_lean_crossspring"
path = "src/bin/benchmark_ode_lean_crossspring.rs"
required-features = ["gpu"]

# ── Exp157-161: Drug Repurposing Track (Phase 39) ─────────────
[[bin]]
name = "validate_fajgenbaum_pathway"
path = "src/bin/validate_fajgenbaum_pathway.rs"

[[bin]]
name = "validate_matrix_pharmacophenomics"
path = "src/bin/validate_matrix_pharmacophenomics.rs"
required-features = ["gpu"]

[[bin]]
name = "validate_nmf_drug_repurposing"
path = "src/bin/validate_nmf_drug_repurposing.rs"
required-features = ["gpu"]

[[bin]]
name = "validate_repodb_nmf"
path = "src/bin/validate_repodb_nmf.rs"
required-features = ["gpu"]

[[bin]]
name = "validate_knowledge_graph_embedding"
path = "src/bin/validate_knowledge_graph_embedding.rs"

# ── Exp152-156: Paper Queue Extension (Phase 39) ──────────────
[[bin]]
name = "validate_physical_comm_anderson"
path = "src/bin/validate_physical_comm_anderson.rs"

[[bin]]
name = "validate_nitrifying_qs"
path = "src/bin/validate_nitrifying_qs.rs"

[[bin]]
name = "validate_marine_interkingdom_qs"
path = "src/bin/validate_marine_interkingdom_qs.rs"

[[bin]]
name = "validate_myxococcus_critical_density"
path = "src/bin/validate_myxococcus_critical_density.rs"

[[bin]]
name = "validate_dictyostelium_relay"
path = "src/bin/validate_dictyostelium_relay.rs"

# ── Exp151: Correlated Disorder Lattices (Phase 39) ───────────
[[bin]]
name = "validate_correlated_disorder"
path = "src/bin/validate_correlated_disorder.rs"
required-features = ["gpu"]

# ── Exp150: Finite-Size Scaling v2 (Phase 39) ─────────────────
[[bin]]
name = "validate_finite_size_scaling_v2"
path = "src/bin/validate_finite_size_scaling_v2.rs"
required-features = ["gpu"]

# ── NCBI Vibrio QS Parameter Landscape (Exp121) ───────────────────
[[bin]]
name = "validate_ncbi_vibrio_qs"
path = "src/bin/validate_ncbi_vibrio_qs.rs"

# ── 2D Anderson Spatial QS Lattice (Exp122) ──────────────────────
[[bin]]
name = "validate_anderson_2d_qs"
path = "src/bin/validate_anderson_2d_qs.rs"
required-features = ["gpu"]

# ── Temporal ESN Bloom Cascade (Exp123) ──────────────────────────
[[bin]]
name = "validate_temporal_esn_bloom"
path = "src/bin/validate_temporal_esn_bloom.rs"

# ── MassBank Full-Scale NPU Spectral Triage (Exp124) ────────────
[[bin]]
name = "validate_npu_spectral_triage"
path = "src/bin/validate_npu_spectral_triage.rs"

# ── NCBI Campylobacterota Pangenome (Exp125) ────────────────────
[[bin]]
name = "validate_ncbi_pangenome"
path = "src/bin/validate_ncbi_pangenome.rs"

# ── Global QS-Disorder Atlas (Exp126) ──────────────────────────
[[bin]]
name = "validate_ncbi_qs_atlas"
path = "src/bin/validate_ncbi_qs_atlas.rs"

# ── 3D Anderson Dimensional QS Sweep (Exp127) ─────────────────
[[bin]]
name = "validate_anderson_3d_qs"
path = "src/bin/validate_anderson_3d_qs.rs"
required-features = ["gpu"]

# ── Vent Chimney Geometry QS Prediction (Exp128) ──────────────
[[bin]]
name = "validate_vent_chimney_qs"
path = "src/bin/validate_vent_chimney_qs.rs"
required-features = ["gpu"]

# ── Dimensional QS Phase Diagram (Exp129) ─────────────────────
[[bin]]
name = "validate_dimensional_phase_diagram"
path = "src/bin/validate_dimensional_phase_diagram.rs"
required-features = ["gpu"]

# ── Thick Biofilm 3D QS Extension (Exp130) ────────────────────
[[bin]]
name = "validate_biofilm_3d_qs"
path = "src/bin/validate_biofilm_3d_qs.rs"
required-features = ["gpu"]

# ── Finite-Size Scaling (Exp131) ──────────────────────────────
[[bin]]
name = "validate_finite_size_scaling"
path = "src/bin/validate_finite_size_scaling.rs"
required-features = ["gpu"]

# ── Geometry Zoo (Exp132) ─────────────────────────────────────
[[bin]]
name = "validate_geometry_zoo"
path = "src/bin/validate_geometry_zoo.rs"
required-features = ["gpu"]

# ── Cave, Hot Spring & Rhizosphere QS (Exp133) ───────────────
[[bin]]
name = "validate_ecosystem_geometry_qs"
path = "src/bin/validate_ecosystem_geometry_qs.rs"
required-features = ["gpu"]

# ── Cross-Ecosystem QS Geometry Atlas (Exp134) ───────────────
[[bin]]
name = "validate_cross_ecosystem_atlas"
path = "src/bin/validate_cross_ecosystem_atlas.rs"
required-features = ["gpu"]

# ── Mapping Sensitivity (Exp135) ─────────────────────────────
[[bin]]
name = "validate_mapping_sensitivity"
path = "src/bin/validate_mapping_sensitivity.rs"
required-features = ["gpu"]

# ── Square-Cubed Law Scaling (Exp136) ────────────────────────
[[bin]]
name = "validate_square_cubed_scaling"
path = "src/bin/validate_square_cubed_scaling.rs"
required-features = ["gpu"]

# ── Planktonic & Fluid 3D Dilution (Exp137) ──────────────────
[[bin]]
name = "validate_planktonic_dilution"
path = "src/bin/validate_planktonic_dilution.rs"
required-features = ["gpu"]

# ── Eukaryote vs Bacteria Scaling (Exp138) ───────────────────
[[bin]]
name = "validate_eukaryote_scaling"
path = "src/bin/validate_eukaryote_scaling.rs"
required-features = ["gpu"]

# ── QS Distance Scaling (Exp139) ─────────────────────────────
[[bin]]
name = "validate_qs_distance_scaling"
path = "src/bin/validate_qs_distance_scaling.rs"
required-features = ["gpu"]

# ── QS Gene Prevalence by Habitat (Exp140) ───────────────────
[[bin]]
name = "validate_qs_gene_prevalence"
path = "src/bin/validate_qs_gene_prevalence.rs"

# ── NCBI QS Habitat Query (Exp141) ──────────────────────────
[[bin]]
name = "validate_ncbi_qs_habitat"
path = "src/bin/validate_ncbi_qs_habitat.rs"

# ── Producer vs Receiver QS (Exp142) ────────────────────────
[[bin]]
name = "validate_producer_receiver_qs"
path = "src/bin/validate_producer_receiver_qs.rs"

# ── Anderson Anomaly Hunter (Exp143) ────────────────────────
[[bin]]
name = "validate_anderson_anomalies"
path = "src/bin/validate_anderson_anomalies.rs"

# ── Cold Seep QS Gene Catalog (Exp144) ─────────────────────
[[bin]]
name = "validate_cold_seep_qs_catalog"
path = "src/bin/validate_cold_seep_qs_catalog.rs"

# ── Cold Seep QS Type vs Geometry (Exp145) ─────────────────
[[bin]]
name = "validate_cold_seep_qs_geometry"
path = "src/bin/validate_cold_seep_qs_geometry.rs"

# ── luxR Phylogeny × Geometry Overlay (Exp146) ─────────────
[[bin]]
name = "validate_luxr_phylogeny_geometry"
path = "src/bin/validate_luxr_phylogeny_geometry.rs"

# ── Mechanical Wave Anderson (Exp147) ──────────────────────
[[bin]]
name = "validate_mechanical_wave_anderson"
path = "src/bin/validate_mechanical_wave_anderson.rs"

# ── QS Wave × Localization (Exp148) ───────────────────────
[[bin]]
name = "validate_qs_wave_localization"
path = "src/bin/validate_qs_wave_localization.rs"

# ── Burst Statistics as Anderson (Exp149) ──────────────────
[[bin]]
name = "validate_burst_statistics_anderson"
path = "src/bin/validate_burst_statistics_anderson.rs"

# ── Cross-Spring S57 Evolution (Exp162) ───────────────────
[[bin]]
name = "validate_cross_spring_s57"
path = "src/bin/validate_cross_spring_s57.rs"
required-features = ["gpu"]
