[package]
name = "wetspring-barracuda"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
authors = ["Squirrel Team"]
license = "AGPL-3.0-or-later"
description = "Life science + PFAS analytical chemistry pipelines — Rust + GPU via barraCuda"
repository = "https://github.com/syntheticChemistry/wetSpring"
keywords = ["bioinformatics", "mass-spectrometry", "pfas", "gpu", "wgsl"]
publish = false
categories = ["science", "command-line-utilities"]
autobins = false

# Workspace root is wetSpring/Cargo.toml; fuzz is a workspace member there.

[lints]
workspace = true

[features]
default = []
# barraCuda as local path dependency (library linking).
# Disable for IPC-only sovereign deployment where barraCuda runs as a separate primal.
barracuda-lib = ["dep:barracuda"]
# GPU acceleration via barraCuda (standalone math primal).
# Enable with `cargo build --features gpu`.
# Adds wgpu v28 (device creation), barraCuda GPU ops (144+ primitives),
# and tokio (async device init). Zero local WGSL shaders (full lean).
gpu = ["barracuda-lib", "barracuda/gpu", "barracuda/domain-esn", "barracuda/domain-genomics", "dep:wgpu", "dep:tokio"]
# NPU acceleration via ToadStool akida-driver (BrainChip AKD1000/AKD1500).
# Enable with `cargo build --features npu`.
# Provides runtime discovery, capability-based dispatch, int8 inference.
npu = ["dep:akida-driver"]
# JSON model import (2 bins: validate_pfas_decision_tree, benchmark_three_tier).
json = ["dep:serde", "dep:serde_json"]
# IPC server for biomeOS science primal (wetspring-server binary).
# Adds JSON-RPC 2.0 over Unix socket, Songbird registration, Neural API metrics.
# BLAKE3 for data ingestion content hashing (data.fetch, vault handlers).
ipc = ["json", "dep:tracing-subscriber", "dep:blake3"]
# guideStone: self-validating NUCLEUS composition node (Level 5 primal proof).
# Depends on primalspring composition API + ipc feature for JSON-RPC.
guidestone = ["ipc", "dep:primalspring", "dep:clap"]
# Nautilus Shell: evolutionary reservoir computing for bio sentinel monitoring.
# Adds concept edge detection, drift monitoring, evolutionary adaptation.
nautilus = ["dep:bingocube-nautilus", "bingocube-nautilus/json"]
# Genomic vault: encrypted consent-gated data storage.
# Adds ChaCha20-Poly1305 AEAD, BLAKE3 keyed MAC signing.
# Ed25519 asymmetric signing migrates to BearDog IPC (Tower Atomic delegation).
vault = ["dep:chacha20poly1305", "dep:blake3"]
# Science facade: HTTP gateway for primals.eco live interactive science.
# Adds Axum web server, tower-http CORS, tokio async runtime, BLAKE3 hashing.
facade = ["json", "dep:axum", "dep:tower-http", "dep:tokio", "dep:tracing-subscriber", "dep:blake3", "dep:toml"]
# Sovereign dispatch: coralReef native GPU binary compilation + toadStool IPC.
# Forwards to barraCuda's sovereign-dispatch feature for testing the
# coralReef → native ISA pipeline from wetSpring validation binaries.
sovereign-dispatch = ["barracuda-lib", "barracuda/sovereign-dispatch", "gpu"]
# Primal proof: IPC-first compute routing for sovereign NUCLEUS deployment.
# When enabled, IPC handler compute calls route through ecobin barraCuda over
# JSON-RPC instead of in-process library calls. Requires a live barraCuda primal.
# Complements `barracuda-lib` (library fallback) for the dual-lane pattern:
#   cargo build --features ipc,primal-proof  → IPC-only (sovereign)
#   cargo build --features ipc               → in-process library (default)
primal-proof = ["ipc"]

[dependencies]
# serde: derive Serialize/Deserialize for visualization types (petalTongue schema).
serde = { version = "1", features = ["derive"], optional = true }
# serde_json: JSON parsing for validation data and model import (2 binaries).
serde_json = { version = "1", optional = true }
# thiserror: derive Error + Display for all error types (ecosystem standard).
thiserror = "2"

# barraCuda — standalone math primal (v0.4.0). Pure math + GPU compute.
# default-features = false: no wgpu/bytemuck pulled in for CPU builds.
# When `gpu` feature is active, `barracuda/gpu` enables GPU ops.
# 150+ primitives consumed. 694+ WGSL shaders. wgpu 28. MSRV 1.87.
# CPU: linalg, special, numerical, spectral, stats, sample.
# GPU: FusedMapReduceF64, BrayCurtisF64, GemmF64, BatchedOdeRK4/RK45, etc.
# Universal precision: f64-canonical with Fp64Strategy + PrecisionRoutingAdvice.
# DF64 core-streaming on consumer GPUs (~10x throughput vs throttled f64).
# New: shaders::provenance (27 cross-spring shader records, evolution_report()),
#      BatchedOdeRK45F64 (adaptive Dormand-Prince), mean_variance_to_buffer(),
#      builder patterns (HmmForwardArgs, Dada2DispatchArgs, GillespieModel, etc.).
barracuda = { path = "../../../primals/barraCuda/crates/barracuda", default-features = false, optional = true }

# akida-driver — pure Rust NPU access (BrainChip AKD1000/AKD1500).
# Independent of barraCuda; sourced from toadStool neuromorphic crates.
# Runtime discovery, capability-based dispatch, zero mocks.
akida-driver = { path = "../../../primals/toadStool/crates/neuromorphic/akida-driver", optional = true }

# wgpu: WebGPU compute — hardware-agnostic GPU via Vulkan/Metal/DX12.
# Same version as barraCuda to prevent duplicate symbol linking errors.
# default-features = false disables wgpu's default feature set.
# Note: renderdoc-sys (C dep) is still pulled on native targets via wgpu-hal.
wgpu = { version = "28", optional = true, default-features = false, features = ["wgsl", "vulkan-portability"] }

# Async runtime for GPU device creation (barracuda already brings tokio in).
tokio = { version = "1", features = ["rt", "macros"], optional = true }

# bingocube-nautilus: evolutionary reservoir computing via BingoCube board populations.
# Pure Rust + serde, no GPU deps. Used for Nautilus Shell bio bridge (concept edge
# detection, drift monitoring, evolutionary adaptation for bio sentinel).
# Cross-spring provenance: primalTools/bingoCube (shared ecosystem tool).
bingocube-nautilus = { path = "../../../primals/bingoCube/nautilus", optional = true }

# tracing: structured diagnostic logging (replaces ad-hoc eprintln! in IPC/server code).
# Pure Rust, zero C deps, ~4KB. Used by 4+ sibling springs (coralReef, neuralSpring, etc.).
tracing = "0.1"
# tracing-subscriber: stderr output for the wetspring server binary (IPC feature only).
tracing-subscriber = { version = "0.3", optional = true, default-features = false, features = ["fmt", "ansi"] }

# bytemuck: zero-copy casting for GPU uniform buffers (GemmCached params).
# Already a transitive dep via barracuda; pinned here for local extensions.
bytemuck = { version = "1", features = ["derive"] }

# I/O: zlib decompression (mzML binary arrays) + GzDecoder (FASTQ .gz).
# Uses miniz_oxide (pure Rust) by default — no C zlib, ecoBin compliant.
# XML parsing is sovereign (src/io/xml.rs); base64 is sovereign (src/encoding.rs).
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }

# primalspring: composition API for guideStone (Level 5 primal proof).
# Provides CompositionContext, validate_parity, validate_liveness, ValidationResult,
# and named tolerances for NUCLEUS IPC certification.
primalspring = { path = "../../primalSpring/ecoPrimal", optional = true }

# clap: CLI argument parsing for the UniBin binary.
clap = { version = "4", features = ["derive"], optional = true }

# toml: TOML parsing for deploy graph structural validation (facade startup).
# Pure Rust, zero C deps, ecoBin compliant.
toml = { version = "0.8", optional = true }
# Axum: web framework for the science facade HTTP gateway.
axum = { version = "0.8", optional = true, default-features = false, features = ["json", "query", "tokio", "http1"] }
# tower-http: middleware for CORS headers on the science facade.
tower-http = { version = "0.6", optional = true, default-features = false, features = ["cors"] }

# Vault: sovereign crypto (pure Rust, ecoBin compliant).
# ChaCha20-Poly1305 AEAD (RustCrypto), Ed25519 (dalek), BLAKE3 hashing.
# Optional — only needed for `vault` feature (genomic vault + consent).
chacha20poly1305 = { version = "0.10", optional = true }
blake3 = { version = "1.8", optional = true, default-features = false, features = ["pure"] }

[dev-dependencies]
tempfile = "3"
temp-env = "0.3"
proptest = "1"

# ── wetSpring UniBin: Eukaryotic single binary ──
# All validation/benchmark/certification/serve dispatched via clap subcommands.
# Supersedes all 349 prokaryotic [[bin]] entries (V182 consolidation).
[[bin]]
name = "wetspring"
path = "src/bin/wetspring_unibin/main.rs"
required-features = ["guidestone"]

# ── Checksum generation for guideStone Property 3 ──
[[example]]
name = "gen_checksums"
path = "examples/gen_checksums.rs"
required-features = ["guidestone"]
