# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "wetspring-exp400"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "NUCLEUS composition parity — full Tower + Node + Nest validation for wetSpring"

[[bin]]
name = "exp400_nucleus_composition_parity"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
wetspring-barracuda = { path = "../../barracuda", features = ["ipc"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
