# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "wetspring-forge"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Hardware discovery and cross-substrate dispatch for wetSpring"
license = "AGPL-3.0-or-later"

[workspace]

[dependencies]
barracuda = { path = "../../../phase1/toadstool/crates/barracuda" }

wgpu = { version = "22", default-features = false, features = [
    "wgsl",
    "vulkan-portability",
] }

tokio = { version = "1", features = ["rt"] }

[[bin]]
name = "validate_dispatch_routing"
path = "src/bin/validate_dispatch_routing.rs"

# ── Exp213: Dispatch + Streaming Evolution (V66) ──
[[bin]]
name = "validate_dispatch_evolution_v66"
path = "src/bin/validate_dispatch_evolution_v66.rs"

[dev-dependencies]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
expect_used = "deny"
unwrap_used = "deny"

doc_markdown = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
significant_drop_tightening = "allow"
