# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "wetspring-forge"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Hardware discovery and cross-substrate dispatch for wetSpring"
license = "AGPL-3.0-or-later"

# Workspace root is wetSpring/Cargo.toml.

[dependencies]
barracuda = { path = "../../../phase1/toadstool/crates/barracuda" }
tempfile = "3"
wetspring-barracuda = { path = "../../barracuda", default-features = false }

wgpu = { version = "22", default-features = false, features = [
    "wgsl",
    "vulkan-portability",
] }

tokio = { version = "1", features = ["rt"] }

[[bin]]
name = "validate_dispatch_routing"
path = "src/bin/validate_dispatch_routing.rs"

# ── Exp213: Dispatch + Streaming Evolution (V66) ──
[[bin]]
name = "validate_dispatch_evolution_v66"
path = "src/bin/validate_dispatch_evolution_v66.rs"

# ── Exp220: Cross-Substrate Dispatch Evolution (V67) ──
[[bin]]
name = "validate_dispatch_evolution_v67"
path = "src/bin/validate_dispatch_evolution_v67.rs"

# ── Exp221: Tower Atomic Wiring + Real Data (V68) ──
[[bin]]
name = "validate_tower_wiring_v68"
path = "src/bin/validate_tower_wiring_v68.rs"

# ── Exp222: Full NUCLEUS Pipeline (V69) ──
[[bin]]
name = "validate_nucleus_pipeline_v69"
path = "src/bin/validate_nucleus_pipeline_v69.rs"

# ── Exp245: PCIe Bypass Mixed Hardware ──
[[bin]]
name = "validate_pcie_bypass_mixed_hw"
path = "src/bin/validate_pcie_bypass_mixed_hw.rs"

# ── Exp246: NUCLEUS Tower→Node→Nest v2 ──
[[bin]]
name = "validate_nucleus_v2_extended"
path = "src/bin/validate_nucleus_v2_extended.rs"

[dev-dependencies]
temp-env = "0.3"
flate2 = "1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
expect_used = "deny"
unwrap_used = "deny"

doc_markdown = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
significant_drop_tightening = "allow"
