# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "wetspring-forge"
version = "0.3.0"
edition = "2024"
rust-version = "1.87"
description = "Hardware discovery and cross-substrate dispatch for wetSpring"
license = "AGPL-3.0-or-later"
publish = false

# Workspace root is wetSpring/Cargo.toml.

[lints]
workspace = true

[dependencies]
barracuda = { path = "../../../barraCuda/crates/barracuda" }
tempfile = "3"
wetspring-barracuda = { path = "../../barracuda", default-features = false, features = ["json", "ipc"] }

wgpu = { version = "28", default-features = false, features = [
    "wgsl",
    "vulkan-portability",
] }

serde_json = "1"
tokio = { version = "1", features = ["rt"] }
pollster = "0.4"
tracing = "0.1"

[[bin]]
name = "validate_dispatch_routing"
path = "src/bin/validate_dispatch_routing.rs"

# ── Exp213: Dispatch + Streaming Evolution (V66) ──
[[bin]]
name = "validate_dispatch_evolution_v66"
path = "src/bin/validate_dispatch_evolution_v66.rs"

# ── Exp220: Cross-Substrate Dispatch Evolution (V67) ──
[[bin]]
name = "validate_dispatch_evolution_v67"
path = "src/bin/validate_dispatch_evolution_v67.rs"

# ── Exp221: Tower Atomic Wiring + Real Data (V68) ──
[[bin]]
name = "validate_tower_wiring_v68"
path = "src/bin/validate_tower_wiring_v68.rs"

# ── Exp222: Full NUCLEUS Pipeline (V69) ──
[[bin]]
name = "validate_nucleus_pipeline_v69"
path = "src/bin/validate_nucleus_pipeline_v69.rs"

# ── Exp245: PCIe Bypass Mixed Hardware ──
[[bin]]
name = "validate_pcie_bypass_mixed_hw"
path = "src/bin/validate_pcie_bypass_mixed_hw.rs"

# ── Exp246: NUCLEUS Tower→Node→Nest v2 ──
[[bin]]
name = "validate_nucleus_v2_extended"
path = "src/bin/validate_nucleus_v2_extended.rs"

# ── Exp266: NUCLEUS v3 — Tower→Node→Nest + Vault + biomeOS ──
[[bin]]
name = "validate_nucleus_v3_extended"
path = "src/bin/validate_nucleus_v3_extended.rs"

# ── Exp269: Mixed Hardware Dispatch — NUCLEUS Atomics + PCIe Bypass ──
[[bin]]
name = "validate_mixed_hw_dispatch"
path = "src/bin/validate_mixed_hw_dispatch.rs"

# ── Exp270: biomeOS Graph Coordination ──
[[bin]]
name = "validate_biomeos_graph"
path = "src/bin/validate_biomeos_graph.rs"

[[bin]]
name = "validate_s86_metalforge_dispatch"
path = "src/bin/validate_s86_metalforge_dispatch.rs"

[[bin]]
name = "validate_nucleus_biomeos_v92g"
path = "src/bin/validate_nucleus_biomeos_v92g.rs"

[[bin]]
name = "validate_mixed_nucleus_v92g"
path = "src/bin/validate_mixed_nucleus_v92g.rs"

# ── Exp329: metalForge + petalTongue Visualization ──
[[bin]]
name = "validate_metalforge_petaltongue"
path = "src/bin/validate_metalforge_petaltongue.rs"

# ── Exp330: biomeOS + NUCLEUS + petalTongue Full Chain ──
[[bin]]
name = "validate_biomeos_petaltongue_full"
path = "src/bin/validate_biomeos_petaltongue_full.rs"

# ── Exp331: Local Evolution & Upstream Readiness ──
[[bin]]
name = "validate_local_evolution_v1"
path = "src/bin/validate_local_evolution_v1.rs"

# ── Exp332: Mixed Hardware Dispatch Evolution ──
[[bin]]
name = "validate_mixed_hw_dispatch_v2"
path = "src/bin/validate_mixed_hw_dispatch_v2.rs"

# ── Exp333: Visualization Evolution ──
[[bin]]
name = "validate_viz_evolution_v1"
path = "src/bin/validate_viz_evolution_v1.rs"

# ── Exp334: Science-to-Viz Pipeline ──
[[bin]]
name = "validate_science_viz_pipeline"
path = "src/bin/validate_science_viz_pipeline.rs"

# ── Previously unregistered binaries (registered V100) ──
[[bin]]
name = "validate_metalforge_v13_mixed"
path = "src/bin/validate_metalforge_v13_mixed.rs"

[[bin]]
name = "validate_metalforge_v14_paper_chain"
path = "src/bin/validate_metalforge_v14_paper_chain.rs"

[[bin]]
name = "validate_biomeos_graph_v2"
path = "src/bin/validate_biomeos_graph_v2.rs"

[dev-dependencies]
temp-env = "0.3"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

